# tomlify

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: python-package.yml
src/tomlify/: __init__.py  utils.py  utils.py.tmp  values.py
src/tomlify/lexer/: base_lexer.py  comment_lexer.py  date_lexer.py  exceptions.py  identifier_lexer.py  lex_runner.py  lexer.py  number_lexer.py  quickcheck.py  scanner.py  string.py  string_lexer.py  token.py  token_type.py
src/tomlify/parser/: abnf.txt  exceptions.py  expr.py  parse_runner.py  parser.py
src/tomlify/utils/: regex.py
tests/: helpers.py  test_lexer.py  test_scanner.py  test_values.py  test_values.py.tmp
tests/integration/: NOTES  helpers.py  runner.py  test_arrays.py  test_booleans.py  test_comments.py  test_datetimes.py  test_floats.py  test_integers.py  test_key_value.py  test_keys.py  test_strings.py  test_tables.py
tests/integration/lexer/: test_arrays.py  test_booleans.py  test_comments.py  test_datetimes.py  test_floats.py  test_integers.py  test_key_value.py  test_keys.py  test_strings.py  test_tables.py
tests/integration/parser/: test_aots.py  test_arrays.py  test_booleans.py  test_comments.py  test_datetimes.py  test_floats.py  test_integers.py  test_key_val.py  test_keys.py  test_strings.py  test_tables.py
tests/lexer/: test_base_lexer.py  test_comment_lexer.py  test_date_lexer.py  test_identifier_lexer.py  test_lexer.py  test_number_lexer.py  test_string_lexer.py
tests/parser/: test_expr.py  test_parser.py  test_token.py
tests/resources/: key_value.toml
tests/resources/aots/: invalid_aots.toml
tests/resources/arrays/: arrays.toml
tests/resources/datetimes/: offset_datetimes.toml
(+12 files in other folders)
