[project]
name = "tomlify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Todd Doughty", email = "w.todd.doughty@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
]
